# nca

./: .gitignore  README.md  pyproject.toml
inv_ae/: nca_inv_ae.ipynb
nca/: ae_experiment.py  bz-reaction.ipynb  cppn_nca.py  easy_utils.py  external_utils.py  iae.ipynb  main.py  models.py  nca.ipynb  nn_utils.py  stream.py  utils.py  vis.py
nca/models/: basic_nca.py
nca_ae/: mnist_ds.py  nca.py  train.py
nca_clf/: clf_patterns.py  data.py  mnist_data.py  nca_model.py  pool.py  train-canon.ipynb  train-cifar10.ipynb  train-radial-circles-explore.ipynb  train-radial-circles.ipynb  train.ipynb  utils.py
notebooks/: 00.experiments.ipynb  01.experiments.ipynb  03.experiments.ipynb  04.new-beginning.ipynb  06.2.nca-ae.ipynb  06.nca-classifier.ipynb  06.nca-classifier2.ipynb  07.nca-ae.ipynb  08.nca-multiscale-lenia.ipynb  09.nca-inv-ae.ipynb  10.sampling-nca-fastplotlib-test.ipynb  99-jax-tutorial.ipynb  Untitled.ipynb  exported-nca.json  iae.ipynb  nca_inv_ae.ipynb  transport-random-potential.ipynb
notebooks/inv_ae/: nca_glider_finder.ipynb  nca_inv_ae-no-noise.ipynb  nca_inv_ae.ipynb
tests/: test_nca.py
