[tool.poetry]
name = "nca"
version = "0.1.0"
description = ""
authors = ["Iliya Zhechev <iliya.zhechev@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
matplotlib = "^3.5.2"
numpy = "^1.22.4"
jupyter = "^1.0.0"
ipdb = "^0.13.9"
tqdm = "^4.64.0"
moviepy = "^1.0.3"
scipy = "^1.10.1"
termcolor = "^2.2.0"
kornia = "^0.7.1"
lightning = "^2.2.5"
tensorboard = "^2.16.2"
torch = "2.0.0"
torchvision = "0.15.1"
notebook = "6.5.7"
torchdata = "^0.7.1"
opencv-python = "^4.10.0.84"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
